# lizardcomette

./: CMakeLists.txt  README.md  idf_component.yml  partition_table.csv  sdkconfig.defaults
.github/workflows/: ci.yml
components/animals/: CMakeLists.txt  animals.c  animals.h  breeding.c  breeding.h  health.c  health.h
components/auth/: CMakeLists.txt  auth.c  auth.h
components/db/: CMakeLists.txt  Kconfig.projbuild  db.c  db.h
components/drivers/: CMakeLists.txt  Kconfig  Kconfig.projbuild  co2.c  co2.h  drivers.c  drivers.h  humidity_ctrl.c  humidity_ctrl.h  light_sensor.c  light_sensor.h  lighting.c  lighting.h  lighting_schedule.c  lighting_schedule.h
components/elevages/: CMakeLists.txt  elevages.c  elevages.h
components/legal/: CMakeLists.txt  legal.c  legal.h  legal_templates.c  legal_templates.h
components/legal_numbers/: CMakeLists.txt  legal_numbers.c  legal_numbers.h
components/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
components/stocks/: CMakeLists.txt  stocks.c  stocks.h
components/storage/: CMakeLists.txt  Kconfig.projbuild  storage.c  storage.h
components/terrariums/: CMakeLists.txt  terrariums.c  terrariums.h
components/transactions/: CMakeLists.txt  transactions.c  transactions.h
components/ui/: ui.c  ui.h
docs/: CONFIG_EXAMPLE.md  ENCRYPTION_FORMAT.md  LEGAL_NUMBERS.md  LEGAL_TEMPLATES.md  NOTICE.md  UI_USAGE.md
hello_world/: idf_project.yml
main/: main.c
reptile_manager/: Cargo.toml  build.rs  partitions.csv
reptile_manager/src/: config.rs  lib.rs  main.rs
reptile_manager/src/config/: mod.rs  settings.rs
reptile_manager/src/domain/: animals.rs  environment.rs  feeding.rs  health.rs  mod.rs  records.rs
reptile_manager/src/hardware/: actuators.rs  display.rs  mod.rs  sensors.rs  touch.rs  watchdog.rs
reptile_manager/src/network/: api.rs  http.rs  mod.rs  mqtt.rs  ota.rs  wifi.rs
reptile_manager/src/storage/: cache.rs  database.rs  filesystem.rs  mod.rs
reptile_manager/src/tasks/: jobs.rs  mod.rs  scheduler.rs  spawner.rs  worker.rs
reptile_manager/src/ui/: mod.rs  navigation.rs  screens.rs  theme.rs  widgets.rs
reptile_manager/src/utils/: conversions.rs  errors.rs  logging.rs  math.rs  mod.rs  time.rs
tests/: CMakeLists.txt  test_animals_validation.c  test_auth.c  test_crud.c  test_db.c  test_legal.c  test_scheduler.c  test_ui.c
