[package]
name = "reptile_manager"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
esp-idf-sys = { version = "0.29", features = ["binstart"] }
esp-idf-hal = "0.29"
lvgl = { version = "0.8", features = ["embedded_graphics"] }
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
pcf85063a = "0.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
xpt2046 = "0.3"
bme280 = "0.5"
onewire = "0.4"
ds18b20 = "0.1"
serde_json = "1"
esp-idf-svc = "0.51"

[lib]
doctest = true
